# a-lame-mp3-encoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format
cmake/: FindLame.cmake
include/: directory.h  mp3encoder.h  pthread_wrapper.h  wavdecoder.h
src/: batch-encoder.cpp  directory.cpp  mp3encoder.cpp  wavdecoder.cpp
tests/: CMakeLists.txt  directory.cpp  mp3encoder.cpp  wavdecoder.cpp
